virtual-service-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: springboot-service
spec:
  hosts:
  - springboot-service
  http:
  - route:
    - destination:
        host: springboot-service
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: profanity-service
spec:
  hosts:
  - profanity-service
  http:
  - route:
    - destination:
        host: profanity-service
